Import file API (#14)
* Draft of import options / parameters.

* Defined  import options for first implementation.

* Implemented a transfer import command handler that imports a file from a given URL and commits it.

* Implemented the TransformResource serving the REST functions.

* Needed for Java 17 compatibility.

* TODO: Consider supporting revision properties (backend recently supports).

* Fixed the injection issues.

* Fixed the JSON body deserialization issue.

* The importItem now supports folder items and auto-naming of the downloaded files.

* Addressed the review comments.

* Uncommented User-Agent and improved the itemId logging.

* Incorporated pathnamebase and pathext parameters and implemented support for importing content alongside url.

* Make sure the item is fully qualified with a hostname in TransformResource.

* A name pattern is required when the folder is a shard parent.

* Use latest cms-item, cms-xmlsource.

* Refactor to use recent CmsItemNameFactory API, separated validation for reuse.

* Use cms-item method isCmsClass

---------

Co-authored-by: Thomas Åkesson <thomas.akesson@simonsoft.se>